--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                       <a class="nav-link text-sm-center" href="#formulario">Conviertete en Orado</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link linkNav_ticket text-sm-center" href="./pages/comprar_tickets.html">Comprar Tickets</a>
+                      <a class="nav-link linkNav_ticket text-sm-center" href="ticket.html">Comprar Tickets</a>
                     </li>
                   </ul>
                 </div>
@@ -65,8 +65,8 @@
                 <div class="position-absolute top-0 end-0">
                     <div class="cartelConferencia">
                         <div class="hijoConferencia">
-                            <h1 class="pb-2 text-sm-center">Conferencia Bs.As.</h1>
-                            <p class="textoConferencia pt-2 pb-2 text-sm-center">Bs. As. llega por primera vez a Argentina. Un evento para compartir con nuestra comunidad el conocimiento y experiencia de los expertos que están creando el futuro de Internet. Ven a conocer a miembros del evento, otros estudiantes de Codo a Codo y los oradores de primer nivel que tenemos para ti. Te esperamos!</p>
+                            <h1 class="pb-2">Conferencia Bs.As.</h1>
+                            <p class="textoConferencia pt-2 pb-2">Bs. As. llega por primera vez a Argentina. Un evento para compartir con nuestra comunidad el conocimiento y experiencia de los expertos que están creando el futuro de Internet. Ven a conocer a miembros del evento, otros estudiantes de Codo a Codo y los oradores de primer nivel que tenemos para ti. Te esperamos!</p>
                             <div class="buttonConferencia pt-2">
                                 <button class="blanco">Quiero ser orador</button>
                                 <button class="verde">Comprar Tickets</button>
